fixed overflowing text

--- a/src/App.css
+++ b/src/App.css
@@ -42,10 +42,14 @@
   color: rgb(255, 255, 255);
 }
 
-
 .base-button:hover {
   background-color: white;
   color: black;
+}
+
+.line-break {
+  max-width: 400px;
+  word-wrap: break-word;
 }
 
 @media only screen and (max-width: 600px) {
@@ -55,5 +59,9 @@
 
   #chat-area {
     padding: 4em 0.7em 0.5em 0.7em;
+  }
+
+  .line-break {
+    max-width: 200px;
   }
 }
